documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P42W32API VOID __stdcall DRV429_ReadBStr(LPBYTE valueptr,INT countval,INT addrval,HCARD handleval);

P42W32API USHORT __stdcall DRV429_ReadCtrlReg(HCARD handleval);

P42W32API ULONG __stdcall DRV429_ReadL(INT addrval,HCARD handleval);

P42W32API INT __stdcall DRV429_ReadLbl(INT label,HCARD handleval);

P42W32API USHORT __stdcall DRV429_ReadRegA(HCARD handleval);

P42W32API USHORT __stdcall DRV429_ReadRegB(HCARD handleval);

P42W32API BYTE __stdcall DRV429_ReadROMB(INT addrval,HCARD handleval);

P42W32API USHORT __stdcall DRV429_ReadStatusReg(HCARD handleval);

P42W32API INT __stdcall DRV429_ReadSym(INT symbol,HCARD handleval);

P42W32API INT __stdcall DRV429_ReadW(INT addrval,HCARD handleval);

P42W32API USHORT __stdcall DRV429_Ready(HCARD handleval);

P42W32API USHORT __stdcall DRV429_RealChan(USHORT channel);

P42W32API VOID __stdcall DRV429_Rearm(USHORT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_Reset(HCARD handleval);

P42W32API VOID __stdcall DRV429_Restart(HCARD handleval);

P42W32API ULONG __stdcall DRV429_SchedAdvance(VOID);

P42W32API ULONG __stdcall DRV429_SchedCalc(VOID);

P42W32API ERRVAL __stdcall DRV429_SchedCheck(LPINT minperiod,LPINT maxperiod);

P42W32API VOID __stdcall DRV429_SchedCheckEnd(VOID);

P42W32API VOID __stdcall DRV429_SchedCheckMiddle(ULONG msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);

P42W32API VOID __stdcall DRV429_SchedCheckReal(ULONG msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);

P42W32API VOID __stdcall DRV429_SchedCheckStart(VOID);

P42W32API ULONG __stdcall DRV429_SchedConflicts(VOID);

P42W32API VOID __stdcall DRV429_SchedDisplay(ULONG nummsgs,LPULONG count,LPULONG *data);

P42W32API ERRVAL __stdcall DRV429_SchedDivide(VOID);

P42W32API ULONG __stdcall DRV429_SchedFix(VOID);

P42W32API VOID __stdcall DRV429_SchedFixEnd(VOID);

P42W32API VOID __stdcall DRV429_SchedFixMiddle(ULONG conflicts);

P42W32API VOID __stdcall DRV429_SchedFixStart(VOID);

P42W32API VOID __stdcall DRV429_SchedHook(INT index,LPVOID ptr);

P42W32API ERRVAL __stdcall DRV429_SchedInsert(ULONG events,ULONG index,ULONG msgnum,ULONG gapval,INT channel,HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_SchedInsertEnd(ULONG events,INT channel,HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_SchedInsertStart(ULONG events,INT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_SchedLayout(VOID);

P42W32API ULONG __stdcall DRV429_SchedMaxval(LPULONG array,ULONG arraycount);

P42W32API ULONG __stdcall DRV429_SchedMinval(LPULONG array,ULONG arraycount);

P42W32API ULONG __stdcall DRV429_SchedMsg(USHORT index,ULONG msgaddr,ULONG gapval,USHORT channel,HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_SchedParse(INT basemsgnum,INT channel,HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_SchedReset(VOID);

P42W32API ERRVAL __stdcall DRV429_SchedRotate(VOID);

P42W32API INT __stdcall DRV429_SchedShift(INT msgnum,INT value);

P42W32API ERRVAL __stdcall DRV429_SchedSlide(VOID);

P42W32API VOID __stdcall DRV429_SchedSlideEnd(VOID);

P42W32API VOID __stdcall DRV429_SchedSlideMiddle(ULONG index,ULONG count,ULONG conflicts);

P42W32API VOID __stdcall DRV429_SchedSlideStart(ULONG factor);

P42W32API VOID __stdcall DRV429_SchedSort(VOID);

P42W32API ULONG __stdcall DRV429_SchedToBit(ULONG value);

P42W32API ULONG __stdcall DRV429_SchedToMsec(ULONG value);

P42W32API VOID __stdcall DRV429_SchedUnsort(VOID);

P42W32API ULONG __stdcall DRV429_SchedWalk(VOID);

P42W32API USHORT __stdcall DRV429_SelfTest(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_SeqDMAStat(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_SeqRecParam(INT channels,INT mode,INT interval,HCARD handleval);

P42W32API ULONG __stdcall DRV429_SeqRecRd(LPULONG buf,ULONG bufsize,HCARD handleval);

P42W32API VOID __stdcall DRV429_SeqRecStart(HCARD handleval);

P42W32API VOID __stdcall DRV429_SeqRecStop(HCARD handleval);

P42W32API VOID __stdcall DRV429_SeqStat(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_SetCtrInt(HCARD handleval);

P42W32API VOID __stdcall DRV429_SetHostInt(HCARD handleval);

P42W32API VOID __stdcall DRV429_SetWindow(INT addrval,BOOL ramrom,HCARD handleval);

P42W32API ULONG __stdcall DRV429_Shl(ULONG dataval,INT cntval);

P42W32API ULONG __stdcall DRV429_Shr(ULONG dataval,INT cntval);

P42W32API USHORT __stdcall DRV429_SignMant(LPSTR str);

P42W32API USHORT __stdcall DRV429_Single(USHORT value,HCARD handleval);

P42W32API USHORT __stdcall DRV429_SpeedClk(USHORT speed,HCARD handleval);

P42W32API VOID __stdcall DRV429_Start(HCARD handleval);

P42W32API VOID __stdcall DRV429_STI(HCARD handleval);

P42W32API VOID __stdcall DRV429_Stop(HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_Test(HCARD handleval);

P42W32API USHORT __stdcall DRV429_UserCode(LPBYTE ptr,USHORT count,HCARD handleval);

P42W32API INT __stdcall DRV429_ValAsciiCmpi(LPSTR str1,LPSTR str2);

P42W32API LPSTR __stdcall DRV429_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

P42W32API VOID __stdcall DRV429_ValAsciiTrimLead(LPSTR buf);

P42W32API VOID __stdcall DRV429_ValAsciiTrimTrail(LPSTR buf);

P42W32API ULONG __stdcall DRV429_ValFromAscii(LPCSTR asciistr,INT radixval);

P42W32API LPSTR __stdcall DRV429_ValIncAscii(LPSTR asciistr);

P42W32API LPSTR __stdcall DRV429_ValInccAscii(LPSTR asciistr);

P42W32API BOOL __stdcall DRV429_ValIsLower(INT value);

P42W32API INT __stdcall DRV429_ValLenAscii(INT numbits,INT radixval);

P42W32API LPSTR __stdcall DRV429_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

P42W32API INT __stdcall DRV429_ValToUpper(INT value);

P42W32API LPSTR __stdcall DRV429_Version(VOID);

P42W32API VOID __stdcall DRV429_VerStr(LPSTR strptr,USHORT count);

P42W32API VOID __stdcall DRV429_WipeMem(HCARD handleval);

P42W32API VOID __stdcall DRV429_WrClk(ULONG clock,HCARD handleval);

P42W32API VOID __stdcall DRV429_WrFreePtr(USHORT freeptr,HCARD handleval);