documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32NET.VB

    Public Declare Sub DRV429_ReadBStr Lib "P42W32.DLL" Alias "_DRV429_ReadBStr@16" (ByRef valueptr As Integer, ByVal countval As Integer, ByVal addrval As Integer, ByVal handleval As Integer)
    Public Declare Function DRV429_ReadCtrlReg Lib "P42W32.DLL" Alias "_DRV429_ReadCtrlReg@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_ReadL Lib "P42W32.DLL" Alias "_DRV429_ReadL@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_ReadLbl Lib "P42W32.DLL" Alias "_DRV429_ReadLbl@8" (ByVal label As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_ReadRegA Lib "P42W32.DLL" Alias "_DRV429_ReadRegA@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_ReadRegB Lib "P42W32.DLL" Alias "_DRV429_ReadRegB@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_ReadROMB Lib "P42W32.DLL" Alias "_DRV429_ReadROMB@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_ReadStatusReg Lib "P42W32.DLL" Alias "_DRV429_ReadStatusReg@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_ReadSym Lib "P42W32.DLL" Alias "_DRV429_ReadSym@8" (ByVal symbol As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_ReadW Lib "P42W32.DLL" Alias "_DRV429_ReadW@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_Ready Lib "P42W32.DLL" Alias "_DRV429_Ready@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_RealChan Lib "P42W32.DLL" Alias "_DRV429_RealChan@4" (ByVal channel As Short) As Short
    Public Declare Sub DRV429_Rearm Lib "P42W32.DLL" Alias "_DRV429_Rearm@8" (ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_Reset Lib "P42W32.DLL" Alias "_DRV429_Reset@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_Restart Lib "P42W32.DLL" Alias "_DRV429_Restart@4" (ByVal handleval As Integer)
    Public Declare Function DRV429_SchedAdvance Lib "P42W32.DLL" Alias "_DRV429_SchedAdvance@0" () As Integer
    Public Declare Function DRV429_SchedCalc Lib "P42W32.DLL" Alias "_DRV429_SchedCalc@0" () As Integer
    Public Declare Function DRV429_SchedCheck Lib "P42W32.DLL" Alias "_DRV429_SchedCheck@8" (ByRef minperiod As Integer, ByRef maxperiod As Integer) As Integer
    Public Declare Sub DRV429_SchedCheckEnd Lib "P42W32.DLL" Alias "_DRV429_SchedCheckEnd@0" ()
    Public Declare Sub DRV429_SchedCheckMiddle Lib "P42W32.DLL" Alias "_DRV429_SchedCheckMiddle@16" (ByVal msgnum As Integer, ByVal minlen As Integer, ByVal midlen As Integer, ByVal maxlen As Integer)
    Public Declare Sub DRV429_SchedCheckReal Lib "P42W32.DLL" Alias "_DRV429_SchedCheckReal@16" (ByVal msgnum As Integer, ByVal minlen As Integer, ByVal midlen As Integer, ByVal maxlen As Integer)
    Public Declare Sub DRV429_SchedCheckStart Lib "P42W32.DLL" Alias "_DRV429_SchedCheckStart@0" ()
    Public Declare Function DRV429_SchedConflicts Lib "P42W32.DLL" Alias "_DRV429_SchedConflicts@0" () As Integer
    Public Declare Sub DRV429_SchedDisplay Lib "P42W32.DLL" Alias "_DRV429_SchedDisplay@12" (ByVal nummsgs As Integer, ByRef count As Integer, ByRef dataval As Integer)
    Public Declare Function DRV429_SchedDivide Lib "P42W32.DLL" Alias "_DRV429_SchedDivide@0" () As Integer
    Public Declare Function DRV429_SchedFix Lib "P42W32.DLL" Alias "_DRV429_SchedFix@0" () As Integer
    Public Declare Sub DRV429_SchedFixEnd Lib "P42W32.DLL" Alias "_DRV429_SchedFixEnd@0" ()
    Public Declare Sub DRV429_SchedFixMiddle Lib "P42W32.DLL" Alias "_DRV429_SchedFixMiddle@4" (ByVal conflicts As Integer)
    Public Declare Sub DRV429_SchedFixStart Lib "P42W32.DLL" Alias "_DRV429_SchedFixStart@0" ()
    Public Declare Sub DRV429_SchedHook Lib "P42W32.DLL" Alias "_DRV429_SchedHook@8" (ByVal index As Integer, ByRef ptr As Integer)
    Public Declare Function DRV429_SchedInsert Lib "P42W32.DLL" Alias "_DRV429_SchedInsert@24" (ByVal events As Integer, ByVal index As Integer, ByVal msgnum As Integer, ByVal gapval As Integer, ByVal channel As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_SchedInsertEnd Lib "P42W32.DLL" Alias "_DRV429_SchedInsertEnd@12" (ByVal events As Integer, ByVal channel As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_SchedInsertStart Lib "P42W32.DLL" Alias "_DRV429_SchedInsertStart@12" (ByVal events As Integer, ByVal channel As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub DRV429_SchedLayout Lib "P42W32.DLL" Alias "_DRV429_SchedLayout@0" ()
    Public Declare Function DRV429_SchedMaxval Lib "P42W32.DLL" Alias "_DRV429_SchedMaxval@8" (ByRef arrayval As Integer, ByVal arraycount As Integer) As Integer
    Public Declare Function DRV429_SchedMinval Lib "P42W32.DLL" Alias "_DRV429_SchedMinval@8" (ByRef arrayval As Integer, ByVal arraycount As Integer) As Integer
    Public Declare Function DRV429_SchedMsg Lib "P42W32.DLL" Alias "_DRV429_SchedMsg@20" (ByVal index As Short, ByVal msgaddr As Integer, ByVal gapval As Integer, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_SchedParse Lib "P42W32.DLL" Alias "_DRV429_SchedParse@12" (ByVal basemsgnum As Integer, ByVal channel As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_SchedReset Lib "P42W32.DLL" Alias "_DRV429_SchedReset@0" () As Integer
    Public Declare Function DRV429_SchedRotate Lib "P42W32.DLL" Alias "_DRV429_SchedRotate@0" () As Integer
    Public Declare Function DRV429_SchedShift Lib "P42W32.DLL" Alias "_DRV429_SchedShift@8" (ByVal msgnum As Integer, ByVal value As Integer) As Integer
    Public Declare Function DRV429_SchedSlide Lib "P42W32.DLL" Alias "_DRV429_SchedSlide@0" () As Integer
    Public Declare Sub DRV429_SchedSlideEnd Lib "P42W32.DLL" Alias "_DRV429_SchedSlideEnd@0" ()
    Public Declare Sub DRV429_SchedSlideMiddle Lib "P42W32.DLL" Alias "_DRV429_SchedSlideMiddle@12" (ByVal index As Integer, ByVal count As Integer, ByVal conflicts As Integer)
    Public Declare Sub DRV429_SchedSlideStart Lib "P42W32.DLL" Alias "_DRV429_SchedSlideStart@4" (ByVal factor As Integer)
    Public Declare Sub DRV429_SchedSort Lib "P42W32.DLL" Alias "_DRV429_SchedSort@0" ()
    Public Declare Function DRV429_SchedToBit Lib "P42W32.DLL" Alias "_DRV429_SchedToBit@4" (ByVal value As Integer) As Integer
    Public Declare Function DRV429_SchedToMsec Lib "P42W32.DLL" Alias "_DRV429_SchedToMsec@4" (ByVal value As Integer) As Integer
    Public Declare Sub DRV429_SchedUnsort Lib "P42W32.DLL" Alias "_DRV429_SchedUnsort@0" ()
    Public Declare Function DRV429_SchedWalk Lib "P42W32.DLL" Alias "_DRV429_SchedWalk@0" () As Integer
    Public Declare Function DRV429_SelfTest Lib "P42W32.DLL" Alias "_DRV429_SelfTest@8" (ByVal value As Short, ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_SeqDMAStat Lib "P42W32.DLL" Alias "_DRV429_SeqDMAStat@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_SeqRecParam Lib "P42W32.DLL" Alias "_DRV429_SeqRecParam@16" (ByVal channels As Integer, ByVal mode As Integer, ByVal interval As Integer, ByVal handleval As Integer)
    Public Declare Function DRV429_SeqRecRd Lib "P42W32.DLL" Alias "_DRV429_SeqRecRd@12" (ByRef buf As Integer, ByVal bufsize As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub DRV429_SeqRecStart Lib "P42W32.DLL" Alias "_DRV429_SeqRecStart@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_SeqRecStop Lib "P42W32.DLL" Alias "_DRV429_SeqRecStop@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_SeqStat Lib "P42W32.DLL" Alias "_DRV429_SeqStat@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_SetCtrInt Lib "P42W32.DLL" Alias "_DRV429_SetCtrInt@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_SetHostInt Lib "P42W32.DLL" Alias "_DRV429_SetHostInt@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_SetWindow Lib "P42W32.DLL" Alias "_DRV429_SetWindow@12" (ByVal addrval As Integer, ByVal ramrom As Integer, ByVal handleval As Integer)
    Public Declare Function DRV429_Shl Lib "P42W32.DLL" Alias "_DRV429_Shl@8" (ByVal dataval As Integer, ByVal cntval As Integer) As Integer
    Public Declare Function DRV429_Shr Lib "P42W32.DLL" Alias "_DRV429_Shr@8" (ByVal dataval As Integer, ByVal cntval As Integer) As Integer
    Public Declare Function DRV429_SignMant Lib "P42W32.DLL" Alias "_DRV429_SignMant@4" (ByVal str As String) As Short
    Public Declare Function DRV429_Single Lib "P42W32.DLL" Alias "_DRV429_Single@8" (ByVal value As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_SpeedClk Lib "P42W32.DLL" Alias "_DRV429_SpeedClk@8" (ByVal speed As Short, ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_Start Lib "P42W32.DLL" Alias "_DRV429_Start@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_STI Lib "P42W32.DLL" Alias "_DRV429_STI@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_Stop Lib "P42W32.DLL" Alias "_DRV429_Stop@4" (ByVal handleval As Integer)
    Public Declare Function DRV429_Test Lib "P42W32.DLL" Alias "_DRV429_Test@4" (ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_UserCode Lib "P42W32.DLL" Alias "_DRV429_UserCode@12" (ByRef ptr As Integer, ByVal count As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_ValAsciiCmpi Lib "P42W32.DLL" Alias "_DRV429_ValAsciiCmpi@8" (ByVal str1 As String, ByVal str2 As String) As Integer
    Public Declare Function DRV429_ValAsciiCpy Lib "P42W32.DLL" Alias "_DRV429_ValAsciiCpy@12" (ByVal strdest As String, ByVal strsrc As String, ByVal count As Integer) As String
    Public Declare Sub DRV429_ValAsciiTrimLead Lib "P42W32.DLL" Alias "_DRV429_ValAsciiTrimLead@4" (ByVal buf As String)
    Public Declare Sub DRV429_ValAsciiTrimTrail Lib "P42W32.DLL" Alias "_DRV429_ValAsciiTrimTrail@4" (ByVal buf As String)
    Public Declare Function DRV429_ValFromAscii Lib "P42W32.DLL" Alias "_DRV429_ValFromAscii@8" (ByVal asciistr As String, ByVal radixval As Integer) As Integer
    Public Declare Function DRV429_ValIncAscii Lib "P42W32.DLL" Alias "_DRV429_ValIncAscii@4" (ByVal asciistr As String) As String
    Public Declare Function DRV429_ValInccAscii Lib "P42W32.DLL" Alias "_DRV429_ValInccAscii@4" (ByVal asciistr As String) As String
    Public Declare Function DRV429_ValIsLower Lib "P42W32.DLL" Alias "_DRV429_ValIsLower@4" (ByVal value As Integer) As Integer
    Public Declare Function DRV429_ValLenAscii Lib "P42W32.DLL" Alias "_DRV429_ValLenAscii@8" (ByVal numbits As Integer, ByVal radixval As Integer) As Integer
    Public Declare Function DRV429_ValToAscii Lib "P42W32.DLL" Alias "_DRV429_ValToAscii@16" (ByVal value As Integer, ByVal asciistr As String, ByVal numbits As Integer, ByVal radixval As Integer) As String
    Public Declare Function DRV429_ValToUpper Lib "P42W32.DLL" Alias "_DRV429_ValToUpper@4" (ByVal value As Integer) As Integer
    Public Declare Function DRV429_Version Lib "P42W32.DLL" Alias "_DRV429_Version@0" () As String
    Public Declare Sub DRV429_VerStr Lib "P42W32.DLL" Alias "_DRV429_VerStr@8" (ByVal strptr As String, ByVal count As Short)
    Public Declare Sub DRV429_WipeMem Lib "P42W32.DLL" Alias "_DRV429_WipeMem@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_WrClk Lib "P42W32.DLL" Alias "_DRV429_WrClk@8" (ByVal clock As Integer, ByVal handleval As Integer)
    Public Declare Sub DRV429_WrFreePtr Lib "P42W32.DLL" Alias "_DRV429_WrFreePtr@8" (ByVal freeptr As Short, ByVal handleval As Integer)
